--- a/Plots_of_AF.ipynb
+++ b/Plots_of_AF.ipynb
@@ -69,6 +69,7 @@
     "\n",
     "# fig, axes = plt.subplots(4, 1, figsize=[8,10], subplot_kw=dict(projection=map_projection), dpi=100)\n",
     "\n",
+    "# Reading Weibull model output files\n",
     "NH_MJJASO = '/scratch3/mali/data/spells/dry_spells/sensitivity_tests/stats/NH_weibull_MJJASO\\\n",
     "_drythresh_1_min_spell_count_40_time_steps_min_spell_length_5D_1D_N_1980_2016.nc'\n",
     "NH_NDJFMA = '/scratch3/mali/data/spells/dry_spells/sensitivity_tests/stats/NH_weibull_NDJFMA\\\n",
@@ -128,6 +129,7 @@
     }
    ],
    "source": [
+    "# Plotting\n",
     "levels=[0.91,0.94,0.97,1.0,1.03,1.06,1.09]\n",
     "\n",
     "data_projection = ccrs.PlateCarree()\n",
