--- a/Plots_of_AF.ipynb
+++ b/Plots_of_AF.ipynb
@@ -67,9 +67,8 @@
     "levels=[0.91,0.94,0.97,1.0,1.03,1.06,1.09]\n",
     "map_projection=ccrs.PlateCarree()\n",
     "\n",
-    "# fig, axes = plt.subplots(4, 1, figsize=[8,10], subplot_kw=dict(projection=map_projection), dpi=100)\n",
-    "\n",
     "# Reading Weibull model output files\n",
+    "\n",
     "NH_MJJASO = '/scratch3/mali/data/spells/dry_spells/sensitivity_tests/stats/NH_weibull_MJJASO\\\n",
     "_drythresh_1_min_spell_count_40_time_steps_min_spell_length_5D_1D_N_1980_2016.nc'\n",
     "NH_NDJFMA = '/scratch3/mali/data/spells/dry_spells/sensitivity_tests/stats/NH_weibull_NDJFMA\\\n",
@@ -234,6 +233,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Reading Weibull model output files\n",
     "NH_MJJASO = '/scratch3/mali/data/spells/wet_spells/sensitivity_tests/stats/NH_weibull_MJJASO\\\n",
     "_wet_thresh_1_min_spell_count_40_time_steps_min_spell_length_5D_1D_N_1980_2016.nc'\n",
     "NH_NDJFMA = '/scratch3/mali/data/spells/wet_spells/sensitivity_tests/stats/NH_weibull_NDJFMA\\\n",
@@ -283,6 +283,7 @@
     }
    ],
    "source": [
+    "# Plotting\n",
     "colors = [(0.7098039215686275, 0.46897347174163784, 0.14955786236063054),\n",
     " (0.8376009227220299, 0.6858131487889272, 0.39792387543252583),\n",
     " (0.9328719723183391, 0.8572087658592848, 0.6678200692041522),\n",
